devconf2024/04_deploy_applications/devconf2024-application-02/base/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: devconf2024-application-02
    app.kubernetes.io/component: devconf2024-application-02
    app.kubernetes.io/instance: devconf2024-application-02
  name: devconf2024-application-02
  namespace: devconf2024-application-02
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/component: devconf2024-application-02
      app.kubernetes.io/instance: devconf2024-application-02
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: devconf2024-application-02
        app.kubernetes.io/instance: devconf2024-application-02
    spec:
      containers:
      - image: quay.io/acm-gitops/chatdraw:latest
        imagePullPolicy: Always
        name: devconf2024-application-02
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      serviceAccountName: default
status: {}
